{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Movement",
            "id": "3fb03687-c8d1-4bf7-940b-538b1f8d19dd",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "88a8fddb-a12e-4a96-b8b2-cf2cba196eb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.001)",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d70425e1-52e9-43f5-a34b-1f24f17c175c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "e3067404-ccc2-4836-ad68-73ad36a31760",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "42ed3579-4d59-464e-b0d0-81dc9a9eb960",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "848d9fa2-efd5-4b34-974b-d5f4ceb3090e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "275a9291-3ffc-4bed-be8a-62602fb917a7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Record",
            "id": "1b1d2eaa-7432-4d2f-b3e8-3e137ee276ae",
            "actions": [
                {
                    "name": "StartRecording",
                    "type": "Button",
                    "id": "9337ce2a-5759-42b7-80fa-d816714d5991",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpawnGhost",
                    "type": "Button",
                    "id": "71815f2f-d18f-4f46-9d38-c08ee4a29f7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8e5bf886-5ad8-4af0-9fc9-dc2782759eb3",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartRecording",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64a70715-a29c-4e23-b1fe-35ea95a63a5c",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnGhost",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}